@@ -1,3 +1,5 @@
+2568.	[bug]		Report when the write to indicate a otherwise					successful start fails. [RT #19360]
+
 2567.	[bug]		dst__privstruct_writefile() could miss write errors.
 			write_public_key() could miss write errors.
 			dnssec-dsfromkey could miss write errors.
